# systemv

./: Makefile  README.md  config.h.in  configure  configure.ac  index.html  params.json  systemv  systemv.c  systemv.h  systemv.socket
docs/: Makefile.am  Makefile.in
examples/: Makefile.am  Makefile.in
man/: Makefile.in
scripts/: Makefile.am  Makefile.in
services/: systemv.service
src/: Makefile.am  Makefile.in  systemv.c  systemv.h
src/systemd/: sd-daemon.c
